removing product tab

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
             <li><a href="#about">About Us</a></li>
             <!-- <li><a href="#products">Products</a></li> -->
 
-            <li class="dropdown">
+            <!--<li class="dropdown">
               <button class="dropbtn">
                 Products
                 <i class="fa fa-caret-down" aria-hidden="true"></i>
@@ -403,7 +403,7 @@
               <div class="dropdown-content">
                 <a href="/products/indusvale.html">IndusVale</a>
               </div>
-            </li>
+            </li> -->
 
             <li><a href="#contact">Contact Us</a></li>
             <li><a href="./careers/">Careers</a></li>
