--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="P5ZAotawFXEwnNufQdRZ8CALjk86hTrWeRTf1KV1Ohw" />
-    <meta name="description" content="We build technologies that connect E-commerce to Entertainment, integrating lifestyle/fashion products to content creation/consumption" />
+    <meta name="description" content="We build technologies that bring shopping, socializing, and content entertainment in one place. We do this by developing Foundational AI models in India and a one-stop platform for people." />
     <title>Blitzfa</title>
     <link rel="icon" href="./assets/logo-black.png" />
     <link
@@ -512,12 +512,7 @@
         </div>
         <div class="row justify-content-center">
           <p class="product-desc text-center">
-            We are here to innovate lifestyle, building an entire lifestyle
-            ecosystem for you from the ground up. For years, brands have shoved
-            down repurposed products down our throats every 10 years in the
-            disguise of a "concept" that trends are cyclical. Just another way
-            of saying "limited imagination". IndusVale exists to build an entire
-            lifestyle ecosystem around YOU!
+            Lifestyle products made by us, designed by VanGO - our Text/Image/Music to Image generation model.
           </p>
         </div>
         <div class="row mt-5">
@@ -542,7 +537,7 @@
             brand with no meaning in their name or incapability to spell
             correctly.
           </p>
-          <a href="./products/indusvale.html">
+          <a href="https://indusvale.in/collections/all">
             <button class="product-btn mt-3">Know more</button>
           </a>
         </div>
@@ -694,7 +689,7 @@
           - must reflect the high standards we profess as we treat them as partners
         </li>
         <li>
-          We are committed to research, to bring science into people’s lifestyle Our future depends
+          We are committed to research, to bring science into people’s lifestyle. Our future depends
           exponentially on the knowledge, imagination, skills, teamwork,
           integrity and courage of our employees, we values these qualities most
           highly
