updating tagling description

--- a/index.html
+++ b/index.html
@@ -446,9 +446,7 @@
           <div class="col-md-12 col-lg-5">
             <h1 class="header">Design Your Living</h1>
             <p class="header-p">
-              We build technologies that connect E-commerce to Entertainment,
-              integrating lifestyle/fashion products to content
-              creation/consumption
+              We build technologies that bring shopping, socializing, and content entertainment in one place. We do this by developing Foundational AI models in India and a one-stop platform for people
             </p>
             <a href="#products"
               ><button class="hero-btn">Explore Products</button></a
