Adding VanGO details

--- a/index.html
+++ b/index.html
@@ -543,19 +543,19 @@
           <div class="col-12 col-lg-6 text-center">
             <img
               class="indusvale-mobile-app-img w-100"
-              src="./assets/OnePlus 10T.png"
-              alt="Indusvale Mobile App"
+              src="./assets/VanGO-phone.png"
+              alt="VanGO Mobile App"
             />
           </div>
           <div class="col-6 mobile-app-desc">
-            <h1 class="">Coming Soon!</h1>
+            <h1 class="">VanGO - the AI Social</h1>
             <div class="d-flex align-items-center gap-2">
               <img
                 class="indusvale-logo"
                 src="./assets/indusvale-logo.png"
                 alt=""
               />
-              <h2>APP</h2>
+              <h2>supported by<br>Foundational AI models by Blitzfa</h2>
             </div>
           </div>
         </div>
