coming soon image update, cleaning texts

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="P5ZAotawFXEwnNufQdRZ8CALjk86hTrWeRTf1KV1Ohw" />
-    <meta name="description" content="We build technologies that bring shopping, socializing, and content entertainment in one place. We do this by developing Foundational AI models in India and a one-stop platform for people." />
+    <meta name="description" content="We build technologies that bring shopping, socializing, and entertainment in one place. We do this by developing Foundational AI models in India and a one-stop platform for people." />
     <title>Blitzfa</title>
     <link rel="icon" href="./assets/logo-black.png" />
     <link
@@ -446,7 +446,7 @@
           <div class="col-md-12 col-lg-5">
             <h1 class="header">Design Your Living</h1>
             <p class="header-p">
-              We build technologies that bring shopping, socializing, and content entertainment in one place. We do this by developing Foundational AI models in India and a one-stop platform for people
+              We build technologies that bring shopping, socializing, and entertainment in one place. We do this by developing Foundational AI models in India and a one-stop platform for people
             </p>
             <a href="#products"
               ><button class="hero-btn">Explore Products</button></a
@@ -510,7 +510,7 @@
         </div>
         <div class="row justify-content-center">
           <p class="product-desc text-center">
-            Lifestyle products made by us, designed by VanGO - our Text/Image/Music to Image generation model.
+            Lifestyle products by IndusVale, designed using VanGO - our Text/Image/Music to Image generation AI model.
           </p>
         </div>
         <div class="row mt-5">
@@ -552,10 +552,10 @@
             <div class="d-flex align-items-center gap-2">
               <img
                 class="indusvale-logo"
-                src="./assets/indusvale-logo.png"
+                src="./assets/comingsoon.png"
                 alt=""
               />
-              <h2>supported by<br>Foundational AI models by Blitzfa</h2>
+              <h4>supported by<br>Foundational AI models by Blitzfa</h4>
             </div>
           </div>
         </div>
