coming soon update

--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                 src="./assets/comingsoon.png"
                 alt=""
               />
-              <h4>supported by<br>Foundational AI models by Blitzfa</h4>
+              <h4>supported by<br>Foundational AI models<br>by Blitzfa</h4>
             </div>
           </div>
         </div>
